# riskassessment_cranevessels

./: .gitignore  README.md  requirements_venv.txt  requirements_venv310.txt
CPP/M1_wave/: CMakeLists.txt
CPP/M2/: main.cpp
CPP/M2_wave/: main.cpp
CPP/M3/: main.cpp
CPP/M4/: CMakeLists.txt
CPP/M4_wave/: main.cpp
CPP/M5/: main.cpp
CPP/M5_optimize/: CMakeLists.txt  main.cpp
CPP/M5_optimize/files/: sim_args.yaml
CPP/M5_optimize/include/: csv_write.h  optimizing.h
CPP/M5_optimize/plots/test1/: meta.yaml
CPP/M5_optimize/plots/test2/: meta.yaml
CPP/M5_optimize/plots/test3/: meta.yaml
CPP/M5_optimize/plots/test4/: meta.yaml
CPP/M5_optimize/plots/test5/: meta.yaml
CPP/M5_optimize/src/: C_added_mass.cpp  D_q_dot.cpp  P_diff_q.cpp  T_diff_q.cpp  gamma_T_diff_omega.cpp  model.cpp  optimizing.cpp  restoring.cpp  run_sim.cpp
GUI/: main.py
GUI/main_menu/: menu.py
GUI/settings_menu/: menu.py
GUI/simulation_menu/: menu.py
cpp_gui/: README.MD  main.cpp
cpp_gui/files/: init.yaml  sim_args.yaml
cpp_gui/include/: model.h  rk4.h
cpp_gui/src/: D_q_dot.cpp  P_diff_q.cpp  R_n_b.cpp  T_diff_q.cpp  dynamic_pressure.cpp  gamma_T_diff_omega.cpp  mass_inertia.cpp  restoring.cpp  vectors_cog.cpp  wave_accelerations.cpp  wave_model.cpp
model_generation/comparing_models/: plot_result.py
model_generation/cpp_write/: cpp_write.py
model_generation/kinematics/: dh_kinematics.py  jacobian.py  joint_type.py  transformations.py
model_generation/plotting/: plotting_3d.py
model_generation/utils/: utils.py
model_generation/wave_models/: wave_potential.py
(+228 files in other folders)
